fix bg color bug

--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,7 @@
   body, html {
     height: 100%;
     line-height: 1.8;
-  }
-  html {
-    background-color: #182026;
-  }
-  body {
-    background-color: #202B33
+    background-color: #202B33;
   }
 </style>
 
