added detail, made space

--- a/public/resume.html
+++ b/public/resume.html
@@ -19,7 +19,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   
     <!-- Left Column -->
     <div class="w3-third">
-    
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
           <img src="http://thoughtcrimedesigns.com/img/photo_of_me.jpg" style="width:100%" alt="Avatar">
@@ -28,7 +27,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
         </div>
         <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Sr Support Specialist</p>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Sr. Support Specialist</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Atlanta, GA, USA</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>josh@joshuasheridan.com</p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>770-490-0791</p>
@@ -52,7 +51,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <br>
           <hr>
           <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Projects</b></p>
-          <!--<p><a href="https://finishingishard.blogspot.com"/>Game Dev Blog</a></p>-->
           <p><a href="https://github.com/jooshkins/SprayBottle">SprayBottle - Script Launcher</a></p>
           <p><a href="https://github.com/jooshkins/ColorPencil">ColorPencil - Permissions Utility </a></p>
           <p><a href="http://thoughtcrimedesigns.com">ThoughtCrime - 3D Printed Jewelry</a></p>
@@ -67,13 +65,17 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <div class="w3-twothird">
     
       <div class="w3-container w3-card w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
+        <h3 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xlarge w3-text-teal"></i>Work Experience</h3>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Senior Support Specialist / Federal Reserve Bank of Atlanta</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2008 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <p>Duties include: systems engineering, server administration, desktop support, scripting, application development.</p>
+          <h6>
+              <b class="w3-opacity">Sr. Support Specialist / Federal Reserve Bank - Atlanta / </b>
+              <span class="w3-text-teal w3-medium">
+                <i class="fa fa-calendar fa-fw "></i> 2008 - <span class="w3-tag w3-teal w3-round">Current</span>
+              </span>
+          </h6>
+          <p>Systems engineering, server administration, desktop support, scripting, application development.</p>
           <ul>
-          <li>Developed a pair of desktop utilities with React and Electron</li>
+          <li>Developed two client facing desktop applications with React and Electron, a self service portal for users to run updates and install software, and a utility to manage folder permissions.</li>
           <li>Designed and implemented a Puppet / Foreman installation, used for configuration management, and imaging of PC, OSX, and Linux workstations.</li>
           <li>Utilized PowerShell and Bash for cross-platform application packaging, reporting, and creating utilities for technicians and clients.</li>
           <li>Started out as an Intern then leveled up to a Support Specialist then again to a Senior Support Specialist.</li>
@@ -81,22 +83,35 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Co-op Computer Engineer / DataPath</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2006 - 2008</h6>
+          <h5>
+              <b class="w3-opacity">Co-op Computer Engineer / DataPath / </b>
+              <span class="w3-text-teal w3-medium">
+                <i class="fa fa-calendar fa-fw "></i> 2006 - 2008
+              </span>
+          </h5>
+          <p>SATCOM equipment driver debugging (TCL code), GUI panel creation, Technical support for Datapath software</p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Computer Repair Technician / Computer Connection</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2006</h6>
-          <hr>
+          <h5>
+              <b class="w3-opacity">Computer Repair Technician / Computer Connection / </b>
+              <span class="w3-text-teal w3-medium">
+                <i class="fa fa-calendar fa-fw "></i> 2006
+              </span>
+          </h5>
+          <p>PC technical support - phone and in-person.</p>
         </div>
       </div>
 
       <div class="w3-container w3-card w3-white">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
+        <h3 class="w3-text-grey w3-padding-16"><i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xlarge w3-text-teal"></i>Education</h3>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Georgia State University</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2012</h6>
+          <h5>
+            <b class="w3-opacity">Georgia State University / </b>
+            <span class="w3-text-teal w3-medium">
+              <i class="fa fa-calendar fa-fw"></i> 2007 - 2012
+            </span>
+          </h5>
           <p>B.F.A. -- Drawing and Painting -- GPA: 4.0 -- Summa Cum Laude</p>
         </div>
       </div>
@@ -107,9 +122,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <!-- End Grid -->
   </div>
         <div class="w3-container w3-white w3-card w3-margin">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Skill Set</h2>
+        <h3 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xlarge w3-text-teal"></i>Skill Set</h3>
         <div class="w3-container w3-card w3-third w3-margin-bottom">
-          <h5 class="w3-opacity"><b>Developer</b></h5>
+          <h5><i class="fa fa-code w3-text-teal"></i><b class="w3-opacity"> Developer</b></h5>
           <p class="w3-opacity">
           <b>Coding:</b><br> 
           JS, PowerShell, Puppet, Bash, C#<br>
@@ -120,7 +135,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </p>
       </div>
       <div class="w3-container w3-card w3-third w3-margin-bottom">
-        <h5 class="w3-opacity"><b>IT</b></h5>
+        <h5><i class="fa fa-gear w3-text-teal"></i><b class="w3-opacity"> IT</b></h5>
           <p class="w3-opacity">
             <b>Server:</b><br>
           Puppet, Foreman, MDT, Active Directory, Hyper-V Server, Windows and Linux Server<br>
@@ -129,7 +144,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </p>
     </div>
       <div class="w3-container w3-card w3-third w3-margin-bottom">
-        <h5 class="w3-opacity"><b>Design</b></h5>
+        <h5><i class="fa fa-pencil w3-text-teal"></i><b class="w3-opacity"> Design</b></h5>
           <p class="w3-opacity">
           Photoshop, Illustrator, Zbrush, Maya, Unity Editor
           </p>
