Made more mobile friendly

--- a/public/resume.html
+++ b/public/resume.html
@@ -31,6 +31,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Atlanta, GA, USA</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>josh@joshuasheridan.com</p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>770-490-0791</p>
+          <p><i class="fa fa-link fa-fw w3-margin-right w3-large w3-text-teal"></i>joshuasheridan.com</p>
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Proficiencies</b></p>
@@ -50,10 +51,15 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <br>
           <hr>
-          <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Projects</b></p>
-          <p><a href="https://github.com/jooshkins/SprayBottle">SprayBottle - Script Launcher</a></p>
-          <p><a href="https://github.com/jooshkins/ColorPencil">ColorPencil - Permissions Utility </a></p>
-          <p><a href="http://thoughtcrimedesigns.com">ThoughtCrime - 3D Printed Jewelry</a></p>
+          <p class="w3-large w3-text-theme"><b><i class="fa fa-code-fork fa-fw w3-margin-right w3-text-teal"></i>Projects</b></p>
+          <p>
+            <img src="GitHub-Mark-64px.png" style="width: 32px" class="w3-margin-right"/>
+            <a href="https://github.com/jooshkins" style="text-decoration: none"> github.com/jooshkins</a>
+          </p>
+          <p>
+            <img src="tc-key.png" style="width: 32px" class="w3-margin-right"/>
+            <a href="http://thoughtcrimedesigns.com" style="text-decoration: none"> thoughtcrimedesigns.com</a>
+          </p>
           <br>
         </div>
       </div><br>
@@ -78,6 +84,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <li>Developed two client facing desktop applications with React and Electron, a self service portal for users to run updates and install software, and a utility to manage folder permissions.</li>
           <li>Designed and implemented a Puppet / Foreman installation, used for configuration management, and imaging of PC, OSX, and Linux workstations.</li>
           <li>Utilized PowerShell and Bash for cross-platform application packaging, reporting, and creating utilities for technicians and clients.</li>
+          <li>Setup, deployed, and managed Windows and Linux servers.</li>
           <li>Started out as an Intern then leveled up to a Support Specialist then again to a Senior Support Specialist.</li>
           </ul>
           <hr>
