--- a/public/resume.html
+++ b/public/resume.html
@@ -90,22 +90,22 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div>
         <div class="w3-container">
-          <h5>
+          <h6>
               <b class="w3-opacity">Co-op Computer Engineer / DataPath / </b>
               <span class="w3-text-teal w3-medium">
                 <i class="fa fa-calendar fa-fw "></i> 2006 - 2008
               </span>
-          </h5>
+          </h6>
           <p>SATCOM equipment driver debugging (TCL code), GUI panel creation, Technical support for Datapath software</p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5>
+          <h6>
               <b class="w3-opacity">Computer Repair Technician / Computer Connection / </b>
               <span class="w3-text-teal w3-medium">
                 <i class="fa fa-calendar fa-fw "></i> 2006
               </span>
-          </h5>
+          </h6>
           <p>PC technical support - phone and in-person.</p>
         </div>
       </div>
@@ -136,18 +136,18 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <b>Coding:</b><br> 
           JS, PowerShell, Puppet, Bash, C#<br>
           <b>Frameworks / Libraries:</b><br> 
-          React, Electron, Node.js, jQuery, Unity<br>
+          React, Electron, Node, jQuery, Unity<br>
           <b>Markup:</b><br>
-          HTML, CSS, Bootstrap, Blueprint<br>
+          HTML, CSS, SCSS, Bootstrap, Blueprint<br>
           </p>
       </div>
       <div class="w3-container w3-card w3-third w3-margin-bottom">
         <h5><i class="fa fa-gear w3-text-teal"></i><b class="w3-opacity"> IT</b></h5>
           <p class="w3-opacity">
             <b>Server:</b><br>
-          Puppet, Foreman, MDT, Active Directory, Hyper-V Server, Windows and Linux Server<br>
+          Puppet, Foreman, MDT, AD, PXE, RAID, Hyper-V, Windows Server, Linux Server, Docker<br>
           <b>Workstation:</b><br>
-          PC, OSX, Linux Support
+          PC, OSX, Linux
           </p>
     </div>
       <div class="w3-container w3-card w3-third w3-margin-bottom">
